samples/_failures_safe/1761364977_245dbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75f274d8.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_75f274d8.c:146:10: error: expected ‘)’ at end of input
  146 |     if (g
      |        ~ ^
      |          )
./samples/SAFE/__tmp_75f274d8.c:146:5: error: expected declaration or statement at end of input
  146 |     if (g
      |     ^~
